Added tests for QuizRepository